# python_etudes

./: LICENSE  README.md
astcalculator/: README.md  pyproject.toml
astcalculator/docs/: manual.md
ttkcalculator/: README.md  pyproject.toml
ttkcalculator/docs/: manual.md  technical_specs.md
ttkcalculator/tests/: controller_test.py  model_test.py  view_mocks.py
ttkcalculator/ttkcalculator/: __init__.py  __main__.py  app.py  controller.py  model.py  view.py
webconverter/: README.md  pyproject.toml
webconverter/docs/: manual.md
